--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- header -->
 
-<a href="index.html"><img src="img/valtLogo.png" id="valtLogo" width="130px" alt="valtLogo" /></a>
+<a href="index.html"><img src="img/valtLogo.png" id="valtLogo" width="130px" alt="valtLogo" /><span></span></a>
 
     <nav class="header-nav home">
         <ul>
@@ -32,9 +32,9 @@
     <header>
         <div class="jumbotron home">
             <div class="header-blocks">
-                <h2>work that matters</h2>
+                <h2>Welcome to Valtira</h2>
                 <div class="grn-underline"></div>
-                <h3>We Challenge Benchmarks<br/>&amp; Push Boundaries</h3>
+                <h3>We Do Work That Matters</h3>
                 <a href="#next"><div class="down-button bounce"><i class="glyphicon glyphicon-chevron-down fa-2x"></i></div></a>
             </div>
         </div>
@@ -45,11 +45,11 @@
 <a name="next"></a>
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
-                <div class="content-blocks content-blocks-white-bg">
+            <div class="col-sm-12 col-md-12">
+                <div class="content-blocks">
                     <h2>we challenge benchmarks &amp; push boundaries</h2>
                     <div class="blu-underline"></div>
-                    <h3>We have designed our services to help you in every stage of your online blah blah blah. We do what we do and we do it better!</h3>
+                    <h3>Whether you need a small, single page application or a large, complex responsive website, Valtira has the resources and skills to architect, design, and build a gorgeous, secure, scalable solution.</h3>
                     <a class="btn blue-btn btn-1 btn-1e" href="services.html">our services</a>
                 </div>
             </div>
@@ -62,11 +62,11 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
-                <div class="content-blocks content-blocks-white-bg">
+            <div class="col-sm-12 col-md-12">
+                <div class="content-blocks">
                     <h2>method to the madness</h2>
                     <div class="grn-underline"></div>
-                    <h3> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</h3>
+                    <h3>Valtira provides a unique and proven approach through all phases of your project. Our goal is to provide a framework for an iterative, phased process which allows for feedback and the ability to adapt to shifting priorities.</h3>
                     <a class="btn green-btn btn-2 btn-2e">our approach</a>
                 </div>
             </div>
@@ -82,36 +82,36 @@
                 <div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="H"></div>
-                        <h2>A bene placito</h2>
-                        <blockquote><p>You have just dined, and however scrupulously the slaughterhouse is concealed in the graceful distance of miles, there is complicity.</p><cite>Ralph Waldo Emerson</cite></blockquote>
+                        <h2></h2>
+                        <blockquote><p>You have just dined, and however scrupulously the slaughterhouse is concealed in the graceful distance of miles, there is complicity.</p><cite>Matt Berg, Executive Director, Care Ventures Cooperative</cite></blockquote>
                     </div>
                 </div>
                 <div class="sl-slide bg-2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="q"></div>
-                        <h2>Regula aurea</h2>
-                        <blockquote><p>Until he extends the circle of his compassion to all living things, man will not himself find peace.</p><cite>Albert Schweitzer</cite></blockquote>
+                        <h2></h2>
+                        <blockquote><p>Until he extends the circle of his compassion to all living things, man will not himself find peace.</p><cite>Jeff Korte, Communications Coordinator,<br/> The League of Minnesota Cities</cite></blockquote>
                     </div>
                 </div>
                 <div class="sl-slide bg-3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="O"></div>
-                        <h2>Dum spiro, spero</h2>
-                        <blockquote><p>Thousands of people who say they 'love' animals sit down once or twice a day to enjoy the flesh of creatures who have been utterly deprived of everything that could make their lives worth living and who endured the awful suffering and the terror of the abattoirs.</p><cite>Dame Jane Morris Goodall</cite></blockquote>
+                        <h2></h2>
+                        <blockquote><p>Until he extends the circle of his compassion to all living things, man will not himself find peace.</p><cite>Jeff Korte, Communications Coordinator,<br/> The League of Minnesota Cities</cite></blockquote>
                     </div>
                 </div>
                 <div class="sl-slide bg-4" data-orientation="vertical" data-slice1-rotation="-5" data-slice2-rotation="25" data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="I"></div>
-                        <h2>Donna nobis pacem</h2>
-                        <blockquote><p>The human body has no more need for cows' milk than it does for dogs' milk, horses' milk, or giraffes' milk.</p><cite>Michael Klaper M.D.</cite></blockquote>
+                        <h2></h2>
+                        <blockquote><p>The human body has no more need for cows' milk than it does for dogs' milk, horses' milk, or giraffes' milk.</p><cite>Kathleen Becker, Director of Marketing, Famous Dave's</cite></blockquote>
                     </div>
                 </div>
                 <div class="sl-slide bg-5" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="t"></div>
-                        <h2>Acta Non Verba</h2>
-                        <blockquote><p>I think if you want to eat more meat you should kill it yourself and eat it raw so that you are not blinded by the hypocrisy of having it processed for you.</p><cite>Margi Clarke</cite></blockquote>
+                        <h2></h2>
+                        <blockquote><p>I think if you want to eat more meat you should kill it yourself and eat it raw so that you are not blinded by the hypocrisy of having it processed for you.</p><cite>Joell Morin, Online Marketing &amp; Project Manager,<br/> Bloomington Convention &amp; Visitors Bureau</cite></blockquote>
                     </div>
                 </div>
             </div>
@@ -131,12 +131,12 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
-                <div class="content-blocks content-blocks-white-bg">
-                    <h2>method to the madness</h2>
+            <div class="col-sm-12 col-md-12">
+                <div class="content-blocks">
+                    <h2>interested in learning more?</h2>
                     <div class="prp-underline"></div>
-                    <h3> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</h3>
-                    <a class="btn purp-btn btn-3 btn-3e">our approach</a>
+                    <h3> If you have a complex web project that requires the best in design, development, or digital marketing, Valtira has the solution. Let us know how we can help and let's do work that matters.</h3>
+                    <a class="btn purp-btn btn-3 btn-3e">get in touch</a>
                 </div>
             </div>
         </div>
@@ -153,6 +153,7 @@
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Approach</a></li>
                     <li><a href="#">Blog</a></li>
+                    <li><a href="#">Careers</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -167,13 +168,12 @@
                 <li class="social-circles"></li>
                 <li class="social-circles"></li>
                 <li class="social-circles"></li>
-                <li class="social-circles"></li>
             </ul>
         </div>
     </div>
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
-        <small>1201 S. Marquette Avenue #330 Minneapolis, Minnesota 55403   |   © 2015 Valtira LLC </small>
+        <small>1201 S. Marquette Avenue #330 Minneapolis, Minnesota 55403   |   &copy; 2015 Valtira LLC </small>
         </div>
     </div>
 
