--- a/services.html
+++ b/services.html
@@ -32,8 +32,8 @@
 <!-- main content -->
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
-                <div class="content-blocks content-blocks-white-bg">
+            <div class="col-sm-12 col-md-12">
+                <div class="content-blocks inner-header-blocks">
                     <h2>we got skills</h2>
                     <div class="prp-underline"></div>
                     <h3> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</h3>
@@ -45,41 +45,107 @@
         <div class="container">
             <div class="row">
                 <div id="mainbox">
-                    <div class="card">
-                      <p>A clean look and solid user experience is the foundation for a solid website. We embrace modern design styles and frameworks at Valtira, and that mentality shows through in our creative work. Whether you have an in-house design team,an agency, or are looking for creative help on your web project, Valtira can plug-and-play as needed by you, the client.</p>
+                    <div class="card card-descr">
+                    <h2><a href="#">Web Development</a></h2>
+                    <div class="tiny-underline-left"></div>
+                      <ul>
+                        <li>Website development</li>
+                        <li>Back end development</li>
+                        <li>Mobile development</li>
+                        <li>UI Design</li>
+                      </ul>
                     </div>
-                    <div class="card">
-                      <p>From the restored 540 K Streamliner to the all-new S65 AMG Coupe to the Concept Coupe SUV, last weekend in Monterey was a celebration of the Mercedes-Benz coupe.</p>
+                    <div class="card card-img1"></div>
+                </div>
+            </div>
+           <div class="row">
+                <div id="mainbox">
+                    <div class="card card-img2"></div>
+                    <div class="card card-descr">
+                    <h2><a href="#">Web Applications</a></h2>
+                    <div class="tiny-underline-left"></div>
+                      <ul>
+                        <li>Single page apps</li>
+                        <li>Interactive tools</li>
+                      </ul>
                     </div>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <div class="card">
-                      <p>From the restored 540 K Streamliner to the all-new S65 AMG Coupe to the Concept Coupe SUV, last weekend in Monterey was a celebration of the Mercedes-Benz coupe.</p>
+                    <div class="card card-descr">
+                    <h2><a href="#">Technology Integrations</a></h2>
+                    <div class="tiny-underline-left"></div>
+                    <ul>
+                        <li>CRM</li>
+                        <li>E-Commerce</li>
+                        <li>Marketing Platforms</li>
+                        <li>Analytics Tools</li>
+                    </ul>
                     </div>
-                    <div class="card">
-                      <p>From the restored 540 K Streamliner to the all-new S65 AMG Coupe to the Concept Coupe SUV, last weekend in Monterey was a celebration of the Mercedes-Benz coupe.</p>
+                    <div class="card card-img3"></div>
+                </div>
+            </div>
+           <div class="row">
+                <div id="mainbox">
+                    <div class="card card-img2"></div>
+                    <div class="card card-descr">
+                    <h2><a href="#">Cloud Solutions</a></h2>
+                    <div class="tiny-underline-left"></div>
+                      <ul>
+                        <li>Cloud architecture</li>
+                        <li>AWS Hosting</li>
+                        <li>Data Storage &amp; Migration</li>
+                      </ul>
                     </div>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <div class="card">
-                      <p>From the restored 540 K Streamliner to the all-new S65 AMG Coupe to the Concept Coupe SUV, last weekend in Monterey was a celebration of the Mercedes-Benz coupe.</p>
-                    </div>
-                    <div class="card">
-                      <p>From the restored 540 K Streamliner to the all-new S65 AMG Coupe to the Concept Coupe SUV, last weekend in Monterey was a celebration of the Mercedes-Benz coupe.</p>
+                    <div class="card card-descr">
+                    <h2><a href="#">Content Management &amp; Marketing Automation</a></h2>
+                    <div class="tiny-underline-left"></div>
+                     <ul>
+                        <li>Simplicis CMS</li>
+                     </ul>
+                     </div>
+                    <div class="card card-img3"></div>
+                </div>
+            </div>
+           <div class="row">
+                <div id="mainbox">
+                    <div class="card card-img2"></div>
+                    <div class="card card-descr">
+                    <h2><a href="#">Digital Marketing</a></h2>
+                    <div class="tiny-underline-left"></div>
+                    <ul>
+                        <li>Data &amp; Analytics</li>
+                        <li>Pay-Per-Click (PPC)</li>
+                        <li>Search Engine Optimization (SEO)</li>
+                    </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="dynamic-containers"></div>
+    <div class="breakers cloud-based">
+        <main class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12">
+                <div class="content-blocks">
+                    <h2>Need a Cloud-based Fully-Customizeable “Magic” CMS?</h2>
+                    <div class="red-underline "></div>
+                    <h3> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</h3>
+                    <a class="btn white-btn btn-4 btn-4e">our approach</a>
+                </div>
+            </div>
+        </div>
+    </main>
+    </div>
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
-                <div class="content-blocks content-blocks-white-bg">
+            <div class="col-sm-12 col-md-12">
+                <div class="content-blocks">
                     <h2>method to the madness</h2>
                     <div class="prp-underline"></div>
                     <h3> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</h3>
@@ -131,8 +197,5 @@
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
 <script type="text/javascript" src="js/classie.js"></script>
-<script type="text/javascript" src="js/jquery.ba-cond.min.js"></script>
-<script type="text/javascript" src="js/jquery.slitslider.js"></script>
-<script type="text/javascript" src="js/slitslider.init.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
 </html>
