--- a/services.html
+++ b/services.html
@@ -15,21 +15,16 @@
 
 <!-- header -->
 
-<div id="wrapper">
-
-<a href="index.html"><img src="img/valtLogo.png" id="valtLogo" width="130px" alt="valtLogo" /></a>
-    <nav class="header-nav whitebg">
+ <header>
+    <nav class="topNav whitebg">
         <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="">Services</a></li>
-        <li><a href="">Work</a></li>
-        <li><a href="">Contact</a></li>
+            <a href="#"><li class="brand"><img src="img/valtLogo.png" id="valtLogo" alt="valtira" /><span class="valtiraTxt"> Valtira</span></li></a>
+            <a href="index.html"><li>Home</li></a>
+            <a href="#"><li>Services</li></a>
+            <a href="#"><li>About</li></a>
+            <a href="#"><li>Contact</li></a>
         </ul>
     </nav>
-    <button class="c-hamburger c-hamburger--htx">
-        <span>toggle menu</span>
-    </button>
-<!-- main content -->
     <main class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12">
@@ -41,12 +36,22 @@
             </div>
         </div>
     </main>
+</header>
+
+<!-- hamburger -->
+
+    <button class="c-hamburger c-hamburger--htx">
+        <span>toggle menu</span>
+    </button>
+
+<!-- main content -->
+
     <div class="gray-bg">
         <div class="container">
             <div class="row">
                 <div id="mainbox">
-                    <div class="card card-descr">
-                    <h2><a href="#">Web Development</a></h2>
+                    <a href="#"><div class="card card-descr">
+                    <h2>Web Development</h2>
                     <div class="tiny-underline-left"></div>
                       <ul>
                         <li>Website development</li>
@@ -54,27 +59,27 @@
                         <li>Mobile development</li>
                         <li>UI Design</li>
                       </ul>
-                    </div>
-                    <div class="card card-img1"></div>
+                    </div></a>
+                    <a href="#"><div class="card card-img1"></div></a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <div class="card card-img2"></div>
-                    <div class="card card-descr">
-                    <h2><a href="#">Web Applications</a></h2>
+                    <a href="#"><div class="card card-img2"></div></a>
+                    <a href="#"><div class="card card-descr">
+                    <h2>Web Applications</h2>
                     <div class="tiny-underline-left"></div>
                       <ul>
                         <li>Single page apps</li>
                         <li>Interactive tools</li>
                       </ul>
-                    </div>
+                    </div></a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <div class="card card-descr">
-                    <h2><a href="#">Technology Integrations</a></h2>
+                    <a href="#"><div class="card card-descr">
+                    <h2>Technology Integrations</h2>
                     <div class="tiny-underline-left"></div>
                     <ul>
                         <li>CRM</li>
@@ -82,48 +87,48 @@
                         <li>Marketing Platforms</li>
                         <li>Analytics Tools</li>
                     </ul>
-                    </div>
-                    <div class="card card-img3"></div>
+                    </div></a>
+                    <a href="#"><div class="card card-img3"></div></a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <div class="card card-img2"></div>
-                    <div class="card card-descr">
-                    <h2><a href="#">Cloud Solutions</a></h2>
+                    <a href="#"><div class="card card-img2"></div></a>
+                    <a href="#"><div class="card card-descr">
+                    <h2>Cloud Solutions</h2>
                     <div class="tiny-underline-left"></div>
                       <ul>
                         <li>Cloud architecture</li>
                         <li>AWS Hosting</li>
                         <li>Data Storage &amp; Migration</li>
                       </ul>
-                    </div>
+                    </div></a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <div class="card card-descr">
-                    <h2><a href="#">Content Management &amp; Marketing Automation</a></h2>
+                    <a href="#"><div class="card card-descr">
+                    <h2>Content Management &amp; Marketing Automation</h2>
                     <div class="tiny-underline-left"></div>
                      <ul>
                         <li>Simplicis CMS</li>
                      </ul>
-                     </div>
-                    <div class="card card-img3"></div>
+                     </div></a>
+                    <a href="#"><div class="card card-img3"></div></a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <div class="card card-img2"></div>
-                    <div class="card card-descr">
-                    <h2><a href="#">Digital Marketing</a></h2>
+                    <a href="#"><div class="card card-img2"></div></a>
+                    <a href="#"><div class="card card-descr">
+                    <h2>Digital Marketing</h2>
                     <div class="tiny-underline-left"></div>
                     <ul>
                         <li>Data &amp; Analytics</li>
                         <li>Pay-Per-Click (PPC)</li>
                         <li>Search Engine Optimization (SEO)</li>
                     </ul>
-                    </div>
+                    </div></a>
                 </div>
             </div>
         </div>
@@ -184,7 +189,6 @@
                 <li class="social-circles"></li>
             </ul>
         </div>
-    </div>
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
         <small>1201 S. Marquette Avenue #330 Minneapolis, Minnesota 55403   |   © 2015 Valtira LLC </small>
