edited footer and top nav

--- a/services.html
+++ b/services.html
@@ -164,36 +164,46 @@
 <!-- footer -->
 
 <footer id="footer">
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8">
+            <ul class="lower-links">
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Approach</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
             <div class="footer-blocks">
-                <ul class="footer-links">
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Approach</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
                 <h2>work that matters</h2>
                 <div class="red-underline"></div>
             </div>
         </div>
     </div>
+
+<!-- content blocks -->
+
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
             <ul class="footer-social">
                 <li class="social-circles"></li>
                 <li class="social-circles"></li>
                 <li class="social-circles"></li>
-                <li class="social-circles"></li>
             </ul>
-        </div>
-    <div class="row">
-        <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
-        <small>1201 S. Marquette Avenue #330 Minneapolis, Minnesota 55403   |   © 2015 Valtira LLC </small>
+            <small>1201 S. Marquette Avenue #330 Minneapolis, Minnesota 55403   |   &copy; 2015 Valtira LLC </small>
         </div>
     </div>
+</div>
 </footer>
 
 </body>
