fixed card padding

--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
 <header>
     <div class="jumbotron home">
     <nav class="topNav">
+        <a href="#">
+            <div class="brand">
+                <img src="img/valtLogo.png" id="valtLogo" alt="valtira" />
+                <span class="valtiraTxt"> Valtira</span>
+            </div>
+        </a>
         <ul>
-            <a href="#"><li class="brand"><img src="img/valtLogo.png" id="valtLogo" alt="valtira" /><span class="valtiraTxt"> Valtira</span></li></a>
             <a href="#"><li>Home</li></a>
             <a href="services.html"><li>Services</li></a>
             <a href="#"><li>About</li></a>
