--- a/services.html
+++ b/services.html
@@ -17,8 +17,13 @@
 
  <header>
     <nav class="topNav whitebg">
+        <a href="#">
+            <div class="brand">
+                <img src="img/valtLogo.png" id="valtLogo" alt="valtira" />
+                <span class="valtiraTxt"> Valtira</span>
+            </div>
+        </a>
         <ul>
-            <a href="#"><li class="brand"><img src="img/valtLogo.png" id="valtLogo" alt="valtira" /><span class="valtiraTxt"> Valtira</span></li></a>
             <a href="index.html"><li>Home</li></a>
             <a href="#"><li>Services</li></a>
             <a href="#"><li>About</li></a>
