--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
                 <div class="content-blocks inner-header-blocks">
                     <h2>we got skills</h2>
                     <div class="prp-underline"></div>
-                    <h3> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</h3>
+                    <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
                 </div>
             </div>
         </div>
@@ -55,7 +55,8 @@
         <div class="container">
             <div class="row">
                 <div id="mainbox">
-                    <a href="#"><div class="card card-descr">
+                    <a href="#"><div class="card card-descr left">
+                    <div id="triangle-topleft"></div>
                     <h2>Web Development</h2>
                     <div class="tiny-underline-left"></div>
                       <ul>
@@ -65,13 +66,16 @@
                         <li>UI Design</li>
                       </ul>
                     </div></a>
-                    <a href="#"><div class="card card-img1"></div></a>
+                    <a href="#">
+                        <div class="card card-img1 minimizedImg-right right"></div>
+                        <pre>caption</pre>
+                    </a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <a href="#"><div class="card card-img2"></div></a>
-                    <a href="#"><div class="card card-descr">
+                    <a href="#"><div class="card card-descr right">
+                    <div id="triangle-left"></div>
                     <h2>Web Applications</h2>
                     <div class="tiny-underline-left"></div>
                       <ul>
@@ -79,11 +83,16 @@
                         <li>Interactive tools</li>
                       </ul>
                     </div></a>
+                    <a href="#">
+                        <div class="card card-img2 minimizedImg-left left"></div>
+                        <pre>caption</pre>
+                    </a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <a href="#"><div class="card card-descr">
+                    <a href="#"><div class="card card-descr left">
+                    <div id="triangle-topleft"></div>
                     <h2>Technology Integrations</h2>
                     <div class="tiny-underline-left"></div>
                     <ul>
@@ -93,13 +102,16 @@
                         <li>Analytics Tools</li>
                     </ul>
                     </div></a>
-                    <a href="#"><div class="card card-img3"></div></a>
+                    <a href="#">
+                        <div class="card card-img3 minimizedImg-right right"></div>
+                        <pre>caption</pre>
+                    </a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <a href="#"><div class="card card-img2"></div></a>
-                    <a href="#"><div class="card card-descr">
+                    <a href="#"><div class="card card-descr right">
+                    <div id="triangle-left"></div>
                     <h2>Cloud Solutions</h2>
                     <div class="tiny-underline-left"></div>
                       <ul>
@@ -108,24 +120,32 @@
                         <li>Data Storage &amp; Migration</li>
                       </ul>
                     </div></a>
+                    <a href="#">
+                        <div class="card card-img2 minimizedImg-left left"></div>
+                        <pre>caption</pre>
+                    </a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <a href="#"><div class="card card-descr">
+                    <a href="#"><div class="card card-descr left">
+                    <div id="triangle-topleft"></div>
                     <h2>Content Management &amp; Marketing Automation</h2>
                     <div class="tiny-underline-left"></div>
                      <ul>
                         <li>Simplicis CMS</li>
                      </ul>
                      </div></a>
-                    <a href="#"><div class="card card-img3"></div></a>
+                    <a href="#">
+                        <div class="card card-img3 minimizedImg-right right"></div>
+                        <pre>caption</pre>
+                    </a>
                 </div>
             </div>
            <div class="row">
                 <div id="mainbox">
-                    <a href="#"><div class="card card-img2"></div></a>
-                    <a href="#"><div class="card card-descr">
+                    <a href="#"><div class="card card-descr right">
+                    <div id="triangle-left"></div>
                     <h2>Digital Marketing</h2>
                     <div class="tiny-underline-left"></div>
                     <ul>
@@ -134,6 +154,10 @@
                         <li>Search Engine Optimization (SEO)</li>
                     </ul>
                     </div></a>
+                    <a href="#">
+                        <div class="card card-img2 minimizedImg-left  left"></div>
+                        <pre>caption</pre>
+                    </a>
                 </div>
             </div>
         </div>
@@ -145,7 +169,7 @@
                 <div class="content-blocks">
                     <h2>Need a Cloud-based Fully-Customizeable “Magic” CMS?</h2>
                     <div class="red-underline "></div>
-                    <h3> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</h3>
+                    <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
                     <a class="btn white-btn btn-4 btn-4e">our approach</a>
                 </div>
             </div>
@@ -158,7 +182,7 @@
                 <div class="content-blocks">
                     <h2>method to the madness</h2>
                     <div class="prp-underline"></div>
-                    <h3> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</h3>
+                    <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
                     <a class="btn purp-btn btn-3 btn-3e">our approach</a>
                 </div>
             </div>
