--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="topNav">
         <a href="#">
             <div class="brand">
-                <img src="img/valtLogo.png" id="valtLogo" alt="valtira" />
+                <img src="img/valtLogo.png" id="valtLogo" alt="valtiraLogo" />
                 <span class="valtiraTxt"> Valtira</span>
             </div>
         </a>
@@ -39,9 +39,9 @@
         </ul>
     </nav>
         <div class="header-blocks">
-            <h2>Welcome to Valtira</h2>
+            <h1>Welcome to Valtira</h1>
             <div class="grn-underline"></div>
-            <h3>We Do Work That Matters</h3>
+            <p>We Do Work That Matters</p>
             <a href="#next"><div class="down-button bounce"><i class="glyphicon glyphicon-chevron-down fa-2x"></i></div></a>
         </div>
     </div>
@@ -56,7 +56,7 @@
                 <div class="content-blocks">
                     <h2>we challenge benchmarks &amp; push boundaries</h2>
                     <div class="blu-underline"></div>
-                    <h3>Whether you need a small, single page application or a large, complex responsive website, Valtira has the resources and skills to architect, design, and build a gorgeous, secure, scalable solution.</h3>
+                    <p>Whether you need a small, single page application or a large, complex responsive website, Valtira has the resources and skills to architect, design, and build a gorgeous, secure, scalable solution.</p>
                     <a class="btn blue-btn btn-1 btn-1e" href="services.html">our services</a>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 <div class="content-blocks">
                     <h2>method to the madness</h2>
                     <div class="grn-underline"></div>
-                    <h3>Valtira provides a unique and proven approach through all phases of your project. Our goal is to provide a framework for an iterative, phased process which allows for feedback and the ability to adapt to shifting priorities.</h3>
+                    <p>Valtira provides a unique and proven approach through all phases of your project. Our goal is to provide a framework for an iterative, phased process which allows for feedback and the ability to adapt to shifting priorities.</p>
                     <a class="btn green-btn btn-2 btn-2e">our approach</a>
                 </div>
             </div>
@@ -89,35 +89,30 @@
                 <div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="H"></div>
-                        <h2></h2>
                         <blockquote><p>You have just dined, and however scrupulously the slaughterhouse is concealed in the graceful distance of miles, there is complicity.</p><cite>Matt Berg, Executive Director, Care Ventures Cooperative</cite></blockquote>
                     </div>
                 </div>
                 <div class="sl-slide bg-2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="q"></div>
-                        <h2></h2>
                         <blockquote><p>Until he extends the circle of his compassion to all living things, man will not himself find peace.</p><cite>Jeff Korte, Communications Coordinator,<br/> The League of Minnesota Cities</cite></blockquote>
                     </div>
                 </div>
                 <div class="sl-slide bg-3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="O"></div>
-                        <h2></h2>
                         <blockquote><p>Until he extends the circle of his compassion to all living things, man will not himself find peace.</p><cite>Jeff Korte, Communications Coordinator,<br/> The League of Minnesota Cities</cite></blockquote>
                     </div>
                 </div>
                 <div class="sl-slide bg-4" data-orientation="vertical" data-slice1-rotation="-5" data-slice2-rotation="25" data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="I"></div>
-                        <h2></h2>
                         <blockquote><p>The human body has no more need for cows' milk than it does for dogs' milk, horses' milk, or giraffes' milk.</p><cite>Kathleen Becker, Director of Marketing, Famous Dave's</cite></blockquote>
                     </div>
                 </div>
                 <div class="sl-slide bg-5" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="deco" data-icon="t"></div>
-                        <h2></h2>
                         <blockquote><p>I think if you want to eat more meat you should kill it yourself and eat it raw so that you are not blinded by the hypocrisy of having it processed for you.</p><cite>Joell Morin, Online Marketing &amp; Project Manager,<br/> Bloomington Convention &amp; Visitors Bureau</cite></blockquote>
                     </div>
                 </div>
@@ -142,7 +137,7 @@
                 <div class="content-blocks">
                     <h2>interested in learning more?</h2>
                     <div class="prp-underline"></div>
-                    <h3> If you have a complex web project that requires the best in design, development, or digital marketing, Valtira has the solution. Let us know how we can help and let's do work that matters.</h3>
+                    <p> If you have a complex web project that requires the best in design, development, or digital marketing, Valtira has the solution. Let us know how we can help and let's do work that matters.</p>
                     <a class="btn purp-btn btn-3 btn-3e">get in touch</a>
                 </div>
             </div>
@@ -173,7 +168,7 @@
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
             <div class="footer-blocks">
-                <h2>work that matters</h2>
+                <h3>work that matters</h3>
                 <div class="red-underline"></div>
             </div>
         </div>
